--- a/doks-theme/_sass/components/_social-list.scss
+++ b/doks-theme/_sass/components/_social-list.scss
@@ -132,6 +132,10 @@
 		&.social-list__item--youtube {
 			color: #cd201f;
 		}
+
+		&.social-list__item--discord {
+			color: #1da1f2;
+		}
 	}
 
 	.icon {
