--- a/doks-theme/_layouts/default.html
+++ b/doks-theme/_layouts/default.html
@@ -58,6 +58,12 @@
 							</div><!-- /.align-container -->
 						</div><!-- /.col -->
 					{% endif %}
+
+							<!--Price Tracker-->
+							<div class="col-md-4 col-md-offset-1 hidden-xs hidden-sm">
+							<script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script><div class="coinmarketcap-currency-widget" data-currencyid="1107" data-base="USD" data-secondary="" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+							</div>
+					
 				</div><!-- /.row -->
 			</div><!-- /.container -->
 		</div><!-- /.hero-subheader -->
