first full commit of final layout

--- a/doks-theme/_includes/site-footer.html
+++ b/doks-theme/_includes/site-footer.html
@@ -54,6 +54,7 @@
 										<i class="fab fa-facebook"></i>
 									</a>
 								</span>
+								
 								<span >
 									<a href="https://www.youtube.com/channel/UC4RnYztNPllFyDEtv6DB4ww" target="_blank" style="border: none">
 										<i class="fab fa-youtube" style="color: #cd201f;"></i>
@@ -84,6 +85,6 @@
 <script type="text/javascript" src="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/doks-theme/assets/js/vendor/bootstrap/scrollspy.min.js"></script>
 <script type="text/javascript" src="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/doks-theme/assets/js/vendor/matchHeight.min.js"></script>
 <script type="text/javascript" src="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/doks-theme/assets/js/scripts.min.js"></script>
-
+<script type="text/javascript" src="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/doks-theme/assets/js/vendor/clipboard.min.js"></script>
 {% include google-analytics.html %}
 
