--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -92,7 +92,7 @@
 								<div class="row">
 									{% for item in page.grid_navigation %}
 										<div class="col-sm-6 col-lg-4">
-											<a href="{{ item.url }}" 
+											<a href="{% if jekyll.environment == 'production' && item.external %}{{ site.doks.baseurl }}{% endif %}{{ item.url }}" 
 											class="nav-grid__item" {% if item.external %} target="_blank" {% endif %}>
 												<div class="nav-grid__content" data-mh>
 													<h2 class="nav-grid__title">{{ item.title }}</h2>
