--- a/doks-theme/_layouts/posts.html
+++ b/doks-theme/_layouts/posts.html
@@ -85,11 +85,23 @@
 			
 			<div class="section section--grey">
 				<div class="container">
+					<a href="https://www.paclyfe.net/groups/pac-masternode-investors/" target="_blank">
 					<div class="row">
-						<div class="col-md-7">
+							<div class="col-md-4">
+									Questions or comments? 
+									<br/>
+									Head over to the $Pac Masternode Group at PacLyfe!
+									</div>
+						<div class="col-md-8">
+							<!--
 							{% include comments.html %}
+							-->
+							<img src="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/images/pl-mngroup.png" style="display: block;margin-left: auto;margin-right: auto;width: 100%;"/>
+							<!-- link to PacLyfe MN group with banner -->
 						</div><!-- /.col -->
+						
 					</div><!-- /.row -->
+				</a>
 				</div><!-- /.container -->
 			</div><!-- /.section -->
 		{% endif %}
